<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.blusoft.horaridam.controlers.PreferencesActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:text="@string/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvNom"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNom"
            android:hint="@string/introdueix_el_teu_nom" />

        <TextView
            android:text="@string/selecciona_el_teu_curs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCurs"
            android:textSize="30sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCurs"
            android:layout_weight="0.20" />

        <TextView
            android:text="@string/selecciona_el_cicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCicle"
            android:textSize="30sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCicle"
            android:layout_weight="0.20" />

        <TextView
            android:text="@string/selecciona_el_teu_grup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvGrup"
            android:textSize="30sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerGrup"
            android:layout_weight="0.20" />

        <TextView
            android:text="@string/tema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTema"
            android:textSize="30sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerTema" />

        <Button
            android:text="Guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGuardar"
            android:textSize="30sp" />
    </LinearLayout>

</RelativeLayout>
